added section 2 file

--- a/src/main.tex
+++ b/src/main.tex
@@ -2,7 +2,9 @@
 \usepackage{}
 \title{mmg}
 \author{Corentin Prigent}
-\date{}
+\date{October, 7 2024}
+
+\newcommand{\mmg}{\textbf{mmg} }
 
 \begin{document}
 \maketitle
