--- a/src/main.tex
+++ b/src/main.tex
@@ -1,5 +1,7 @@
 \documentclass[10pt]{book}
-\usepackage{}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{geometry}
 \title{mmg}
 \author{Corentin Prigent}
 \date{October, 7 2024}
@@ -12,5 +14,6 @@
 
 \input{src/1_introduction}
 \input{src/2_data_structures}
+\input{src/3_remeshing_process}
 
 \end{document}
