changed some file names

--- a/src/main.tex
+++ b/src/main.tex
@@ -12,8 +12,8 @@
 \maketitle
 \tableofcontents
 
-\input{src/1_introduction}
-\input{src/2_data_structures}
-\input{src/3_remeshing_process}
+\input{src/mmg-introduction.tex}
+\input{src/mmg-data-structures.tex}
+\input{src/mmg-remeshing-process.tex}
 
 \end{document}
